<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/iteTransparent"
        android:title="@string/transparent"/>
    <item
        android:id="@+id/iteSemiransparent"
        android:title="@string/semitransparent"/>
    <item
        android:id="@+id/iteOpaque"
        android:title="@string/opaque"/>
    <item
        android:id="@+id/iteYellow"
        android:title="@string/yellow"/>
    <item
        android:id="@+id/iteRed"
        android:title="@string/red"/>
    <item
        android:id="@+id/iteBlue"
        android:title="@string/blue"/>
    <item
        android:id="@+id/iteGreen"
        android:title="@string/green"/>
    <item
        android:id="@+id/iteBrown"
        android:title="@string/brown"/>
    <item
        android:id="@+id/iteBlack"
        android:title="@string/black"/>
    <item
        android:id="@+id/itePink"
        android:title="@string/pink"/>
    <item
        android:id="@+id/itePurple"
        android:title="@string/purple"/>
    <item
        android:id="@+id/opt_9"
        android:title="White"/>
    <item
        android:id="@+id/opt_10"
        android:title="Gray"/>
    <item
        android:id="@+id/Alpha"
        android:title="@string/alpha"/>
    <item
        android:id="@+id/Aboutof"
        android:title="@string/aboutof"/>











</menu>